--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,19 +1,34 @@
 name: flutter_weather
-description: "A new Flutter project."
-publish_to: 'none'
-version: 0.1.0
+description: A new Flutter project.
+version: 1.0.0+1
+publish_to: none
 
 environment:
-  sdk: ^3.8.1
+  sdk: ">=3.8.0 <4.0.0"
 
 dependencies:
+  bloc: ^9.0.0
+  equatable: ^2.0.0
   flutter:
     sdk: flutter
+  flutter_bloc: ^9.1.0
+  google_fonts: ^6.0.0
+  hydrated_bloc: ^10.0.0
+  json_annotation: ^4.8.1
+  path_provider: ^2.0.8
+  weather_repository:
+    path: packages/weather_repository
 
 dev_dependencies:
+  bloc_lint: ^0.2.0-dev.0
+  bloc_test: ^10.0.0
+  build_runner: ^2.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  json_serializable: ^6.0.0
+  mocktail: ^1.0.0
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/
